--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "README.md",
+            "file": "ProjectProgress.md",
             "mode": "source",
             "source": false
           }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "README.md",
+                "file": "ProjectProgress.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,8 +89,8 @@
   },
   "active": "8d9527cb0f6bf75d",
   "lastOpenFiles": [
-    "README.md",
     "ProjectProgress.md",
+    "README.md",
     "Pendings.md",
     "LabJournal.md",
     "MeetingNotes.md",
