--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "LabJournal.md",
+            "file": "useful_links.md",
             "mode": "source",
             "source": false
           }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "LabJournal.md",
+                "file": "useful_links.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,12 +89,12 @@
   },
   "active": "93e649748163c82a",
   "lastOpenFiles": [
+    "useful_links.md",
+    "useful_links-for.work.md",
     "LabJournal.md",
     "MeetingNotes.md",
     "Pendings.md",
     "ProjectProgress.md",
-    "README.md",
-    "useful_links-for.work.md",
-    "useful_links.md"
+    "README.md"
   ]
 }
