--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -91,10 +91,10 @@
   "lastOpenFiles": [
     "Pendings.md",
     "LabJournal.md",
-    "ProjectProgress.md",
     "MeetingNotes.md",
+    "ProjectProgress.md",
+    "README.md",
     "useful_links.md",
-    "useful_links-for.work.md",
-    "README.md"
+    "useful_links-for.work.md"
   ]
 }
