--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,12 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "93e649748163c82a",
+        "id": "f73716f5f0241278",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "CodingTricks/zshrc.md",
+            "file": "LabJournal.md",
             "mode": "source",
             "source": false
           }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "CodingTricks/zshrc.md",
+                "file": "LabJournal.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -87,17 +87,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "93e649748163c82a",
+  "active": "f73716f5f0241278",
   "lastOpenFiles": [
-    "CodingTricks/zshrc.md",
-    "CodingTricks/ssh keys.md",
-    "useful_links-for.work.md",
-    "useful_links.md",
-    "README.md",
-    "Pendings.md",
-    "ProjectProgress.md",
     "LabJournal.md",
     "MeetingNotes.md",
+    "CodingTricks/zshrc.md",
+    "CodingTricks/ssh keys.md",
+    "README.md",
+    "useful_links.md",
+    "Pendings.md",
+    "useful_links-for.work.md",
+    "ProjectProgress.md",
     "CodingTricks/SingularityRecipes/rserver.def.md"
   ]
 }
