--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,12 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "7330ac9fc756d66d",
+        "id": "bae801e4d6167967",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "CodingTricks/zshrc.md",
+            "file": "LabJournal.md",
             "mode": "source",
             "source": false
           }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "CodingTricks/zshrc.md",
+                "file": "LabJournal.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -87,17 +87,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "7330ac9fc756d66d",
+  "active": "bae801e4d6167967",
   "lastOpenFiles": [
-    "CodingTricks/zshrc.md",
     "LabJournal.md",
-    "MeetingNotes.md",
     "CodingTricks/ssh keys.md",
-    "useful_links.md",
-    "Pendings.md",
     "ProjectProgress.md",
-    "README.md",
     "useful_links-for.work.md",
+    "useful_links.md",
+    "README.md",
+    "Pendings.md",
+    "MeetingNotes.md",
+    "CodingTricks/zshrc.md",
     "CodingTricks/SingularityRecipes/rserver.def.md"
   ]
 }
